--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pyyaml>=6.0",
     "tqdm>=4.65",
     "requests>=2.31",
+    "python-dotenv>=1.0",
     "anthropic>=0.40",
     "google-genai>=1.0",
     "yt-dlp>=2024.0",
