Parallelize video download and analysis, add trim + downscale preprocessing
- Video downloads now use ThreadPoolExecutor (default 4 workers)
- Gemini video analysis now uses ThreadPoolExecutor (default 3 workers)
- Videos longer than 5 minutes are trimmed via ffmpeg before upload
- Videos taller than 720p are downscaled before upload
- Prepared files are cached as _prepared.mp4 to avoid re-processing

These changes should roughly 3-4x download speed and 3x analysis speed,
with further gains from smaller upload sizes on long/high-res videos.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -25,7 +25,7 @@ code_review:
 video_analysis:
   provider: "gemini"
   model: "gemini-3-flash-preview"
-  max_video_duration: 180        # only analyze first N seconds
+  max_video_duration: 300        # trim videos longer than this (seconds)
 
 # Hackathon-specific settings (all optional -- omit this section for generic use)
 # hackathon:
