Fix scoring criterion key mismatch and update config example
The LLM review prompt produces 'ai_use' as the criterion key but
config.example.yaml had 'ai_use' with a clearer description. Added
note that ai_use maps to the LLM's "AI Use" score output.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -44,7 +44,7 @@ video_analysis:
 #       description: "Real-world potential, who benefits, product viability"
 #     ai_use:
 #       weight: 0.25
-#       description: "Creativity and depth of AI/LLM integration"
+#       description: "Creativity and depth of AI/LLM integration (maps to LLM 'AI Use' score)"
 #     depth:
 #       weight: 0.20
 #       description: "Engineering quality, iteration, craft"
